# SpeckleNoise-SAR-analisys

./: .gitignore  LICENSE  pyproject.toml
notebooks/: denoising_tests.ipynb
src/sar_speckle/: __init__.py  cli.py  metrics.py  simulation.py
src/sar_speckle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sar_speckle/filters/: __init__.py  classical.py
tests/: test_filters.py  test_simulation.py
